docs/0.5.2/_sources/generated/skbio.sequence.DNA.rst.txt
skbio\.sequence\.DNA
====================

.. currentmodule:: skbio.sequence

.. autoclass:: DNA

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         
         DNA.__bool__
         
         DNA.__contains__
         
         DNA.__copy__
         
         DNA.__deepcopy__
         
         
         DNA.__eq__
         
         DNA.__format__
         
         DNA.__getitem__
         
         
         DNA.__iter__
         
         DNA.__len__
         
         DNA.__ne__
         
         
         
         
         
         DNA.__reversed__
         
         
         DNA.__str__
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         DNA.complement
         
         DNA.concat
         
         DNA.count
         
         DNA.definites
         
         DNA.degap
         
         DNA.degenerates
         
         DNA.distance
         
         DNA.expand_degenerates
         
         DNA.find_motifs
         
         DNA.find_with_regex
         
         DNA.frequencies
         
         DNA.gaps
         
         DNA.gc_content
         
         DNA.gc_frequency
         
         DNA.has_definites
         
         DNA.has_degenerates
         
         DNA.has_gaps
         
         DNA.has_interval_metadata
         
         DNA.has_metadata
         
         DNA.has_nondegenerates
         
         DNA.has_positional_metadata
         
         DNA.index
         
         DNA.is_reverse_complement
         
         DNA.iter_contiguous
         
         DNA.iter_kmers
         
         DNA.kmer_frequencies
         
         DNA.lowercase
         
         DNA.match_frequency
         
         DNA.matches
         
         DNA.mismatch_frequency
         
         DNA.mismatches
         
         DNA.nondegenerates
         
         DNA.read
         
         DNA.replace
         
         DNA.reverse_complement
         
         DNA.to_regex
         
         DNA.transcribe
         
         DNA.translate
         
         DNA.translate_six_frames
         
         DNA.write



   

